# search-engine-from-scratch

./: .gitignore  HYBRID_SEARCH_RESULTS.md  README.md  conf.yaml  main.py  pyproject.toml
data/processed/: inverted_index.json  keyword_inverted_index.json  semantic_inverted_index.json
data/test_cases/: test_cases.json  test_cases_title_only.json
notebooks/: eda.ipynb  search_engines.ipynb
scripts/: compare_search_engines.py  evaluate_with_test_cases.py  run_keyword_search.py  test_search_engines.py  utils.py
search_engine/: __init__.py  base.py  bm25_search.py  hybrid_search.py  keyword_search.py  semantic_search.py  storage.py  tokenizer.py
tests/: test_base.py  test_bm25_search.py  test_hybrid_search.py  test_keyword_search.py  test_semantic_search.py  test_tokenizer.py
